Landing Page luanched

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   	<!-- Basic Page Needs
   	================================================== -->
   	<meta charset="utf-8">
- 	<title>Homestead Coworking</title>
+ 	<title>Emigrant Partners</title>
  	<meta name="description" content="A collaborative workspace for independant spirits in the heart of downtown Edmonton.">
  	<meta name="author" content="">
 
@@ -23,7 +23,7 @@
 
     <!-- Favicons
     ================================================== -->
-    <link rel="shortcut icon" href="http://homestead.cc/images/favicon.ico">
+    <link rel="shortcut icon" href="#">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -31,7 +31,7 @@
     <!-- Scripts
     ================================================== -->
 
-    <script src="//use.typekit.net/yuv0rsr.js"></script>
+    <script src="//use.typekit.net/vtw6ufy.js"></script>
     <script>try{Typekit.load();}catch(e){}</script>
 
   </head>
@@ -43,11 +43,17 @@
 
         <div class="logo">
 
-    		  <img src="images/homestead-logo.svg" alt="Homestead Coworking">
+    		  <img src="images/emigrant-logo.svg" alt="Emigrant Partners">
 
-          <p>A collaborative workspace for independent spirits<br/>in the heart of downtown Edmonton.</p>
+          <h3>Ventures</h3>
 
-          <p><a href="https://www.google.ca/maps/place/Homestead+Coworking/@53.537537,-113.508723,17z/data=!3m1!4b1!4m2!3m1!1s0x53a0223a2ecb6f8b:0x9822d886239e7e13">9908 109 St. NW, Edmonton, Alberta Canada</a><br/> <a href="mailto:space@homestead.cc">space@homestead.cc</a> <span class="spacer">|</span> <a href="http://twitter.com/homestead_cc">@homestead_cc</a></p>
+           <p><strong>Bushel</strong> - Helping people foster better relationships with the products they use, the food they eat, and the cities they live in.</br><a href="http://bushel.co">bushel.co</a></p>
+
+          <p><strong>Homestead</strong> - A collaborative workspace for independent spirits in the heart of downtown Edmonton.</br><a href="http://homestead.cc">homestead.cc</a></p>
+
+          <h3>Contact</h3>
+
+          <p>#5 9908 109 St. NW, Edmonton, Alberta Canada</a> <span class="spacer">|</span> <a href="mailto:info@emigrant.cc">info@emigrant.cc</a>
 
         </div>
 
@@ -60,15 +66,15 @@
   	<!--GOOGLE ANALYTICS -->
   	
       <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-55871573-1', 'auto');
-      ga('send', 'pageview');
+        ga('create', 'UA-60761535-1', 'auto');
+        ga('send', 'pageview');
 
-    </script>
+      </script>
   	
     <!-- END GOOGLE ANALYTICS -->
 
