--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	================================================== -->
   	<meta charset="utf-8">
  	<title>Emigrant Partners</title>
- 	<meta name="description" content="A collaborative workspace for independant spirits in the heart of downtown Edmonton.">
+ 	<meta name="description" content="A small creative studio in Edmonton Alberta.">
  	<meta name="author" content="">
 
     <!-- CSS
@@ -47,9 +47,9 @@
 
           <h3>Ventures</h3>
 
-           <p><strong>Bushel</strong> - Helping people foster better relationships with the products they use, the food they eat, and the cities they live in.</br><a href="http://bushel.co">bushel.co</a></p>
+           <p><bold>BUSHEL</bold> - Helping people foster better relationships with the products they use, the food they eat, and the cities they live in.</br><em><a href="http://bushel.co">bushel.co</a></em></p>
 
-          <p><strong>Homestead</strong> - A collaborative workspace for independent spirits in the heart of downtown Edmonton.</br><a href="http://homestead.cc">homestead.cc</a></p>
+          <p><bold>HOMESTEAD</bold> - A collaborative workspace for independent spirits in the heart of downtown Edmonton.</br><a href="http://homestead.cc">homestead.cc</a></p>
 
           <h3>Contact</h3>
 
