--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <h3>Contact</h3>
 
-          <p>#5 9908 109 St. NW, Edmonton, Alberta Canada</a> <span class="spacer">|</span> <a href="mailto:info@emigrant.cc">info@emigrant.cc</a>
+          <p>202 10526 Jasper Avenue NW, Edmonton, Alberta Canada</a> <span class="spacer">|</span> <a href="mailto:info@emigrant.cc">info@emigrant.cc</a>
 
         </div>
 
