--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <h3>Contact</h3>
 
-          <p>#5 9908 109 St. NW, Edmonton, Alberta Canada</a> <!-- <span class="spacer">|</span> --><br/> <a href="mailto:info@emigrant.co">info@emigrant.co</a>
+          <p>202 10526 Jasper Avenue NW, Edmonton, Alberta Canada</a> <!-- <span class="spacer">|</span> --><br/> <a href="mailto:info@emigrant.co">info@emigrant.co</a>
 
         </div>
 
