--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <h3>Contact</h3>
 
-          <p>325 21st Street West, Saskatoon, Saskatchewan, Canada S7M 0W3</a> <!-- <span class="spacer">|</span> --><br/> <a href="mailto:info@emigrant.co">info@emigrant.co</a>
+          <p>325 21st Street West, Saskatoon, Saskatchewan, Canada</a> <!-- <span class="spacer">|</span> --><br/> <a href="mailto:info@emigrant.co">info@emigrant.co</a>
 
         </div>
 
