--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     		  <img src="images/emigrant-logo.svg" alt="Emigrant Partners">
 
-
-          <p><a href="mailto:info@emigrant.co">info@emigrant.co</a>
+          <p>A brand and business development studio</p>
+          <p><a href="mailto:mail@emigrant.co">mail@emigrant.co</a>  |  <a href="https://instagram.com/emigrant.partners" target="_blank">emigrant.partners</a></p>
 
         </div>
 
