--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     		  <img src="images/emigrant-logo.svg" alt="Emigrant Partners">
 
           <p>A brand and business development studio</p>
-          <p><a href="mailto:mail@emigrant.co">mail@emigrant.co</a>  |  <a href="https://instagram.com/emigrant.partners" target="_blank">emigrant.partners</a></p>
+          <p><a href="mailto:mail@emigrant.co">mail@emigrant.co</a>  |  <a href="https://instagram.com/emigrant.partners" target="_blank">@emigrant.partners</a></p>
 
         </div>
 
